Initial commit for BUFR Tools
This commit establishes a mostly empty project for encoding/decoding
BUFR files.

--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,5 @@
-name: metar38
+name: bufrtools
 channels:
   - conda-forge
   - defaults
-dependencies:
-  - lxml>=4.5.0
-  - requests>=2.23.0
+dependencies: []
