--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 image: continuumio/miniconda3:4.6.14
 
 stages:
-  - lint
   - test
 
 test:
@@ -15,7 +14,7 @@ test:
     - pytest bufrtools
 
 lint:
-  stage: lint
+  stage: test
   script:
     - conda config --set always_yes yes
     - conda create --name flakeit python=3.8
