Adds full encoding for WC profiles
This commit adds the modules and a CLI necessary for encoding a WC
profile netCDF file as a BUFR message.

--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,8 @@ name: bufrtools
 channels:
   - conda-forge
   - defaults
+  - axiom-data-science
 dependencies:
   - pyyaml
   - pandas
+  - pocean-core>=1.9.3
