Support cftime datetime objects in dataframes from netCDF files
Adds missing dependencies as well

--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ channels:
   - defaults
   - axiom-data-science
 dependencies:
+  - cftime
   - pyyaml
   - pandas
   - pocean-core>=1.9.3
+  - pyarrow
