--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,13 +12,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
+      with:
+        python-version: 3.x
     - uses: pre-commit/action@v2.0.0
 
   test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.8", "3.9"]
+        python-version: ["3.8", "3.9", "3.10", "3.12"]
         os: [ubuntu-latest]
 
     steps:
@@ -56,7 +58,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: 3.x
 
